--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@americanexpress/one-app",
+  "name": "one-app-test-deploy-statics",
   "version": "5.0.0-rc1",
   "description": "One Amex SPA technology stack.",
   "main": "index.js",
