--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
   # Create a master branch for commitlint
   # https://github.com/conventional-changelog/commitlint/issues/6
   - git remote set-branches --add origin master && git fetch
-# install: NODE_ENV=development npm ci
+install: NODE_ENV=development npm ci
+before_script:
   - docker build -t infoxicator/one-app-test .
   - docker cp $(docker create infoxicator/one-app-test):opt/one-app/build ./one-app-statics
 jobs:
