fix(travis): remove skip

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,9 @@ install: NODE_ENV=development npm ci
 jobs:
   include:
     - stage: build docker prod image
-      script: docker build -t infoxicator/one-app-test .
-    - stage: extract static assets from image
-      install: skip
-      script: docker cp $(docker create infoxicator/one-app-test):opt/one-app/build ./one-app-statics
+      - docker build -t infoxicator/one-app-test .
+      - docker cp $(docker create infoxicator/one-app-test):opt/one-app/build ./one-app-statics
     - stage: Deploy Statics
-      install: skip
       before_deploy:
         - cd one-app-statics
       deploy:
@@ -28,7 +25,6 @@ jobs:
         on:
           branch: feature/npm-publish-test
     - stage: Push image
-      install: skip
       before_script:
         - cd ..
       script: ./scripts/docker-push-prod.sh
