--- a/one-app-statics/package.json
+++ b/one-app-statics/package.json
@@ -1,11 +1,8 @@
 {
   "name": "infoxicator-one-app-statics",
-  "version": "5.0.4",
-  "description": "One app statics jsdeliver CDN",
-  "repository": "americanexpress/one-app",
+  "version": "5.0.0-rc1",
+  "description": "One App Static Assets",
   "license": "Apache-2.0",
-  "author": "Ruben Casas",
-  "main": "5.0.0/app.js",
   "contributors": [
     "Andres Escobar <Andres.Escobar@aexp.com> (https://github.com/anescobar1991)",
     "James Singleton <James.Singleton1@aexp.com> (https://github.com/JamesSingleton)",
@@ -16,15 +13,5 @@
     "Stephanie Coates  <Stephanie.Coates1@aexp.com> (https://github.com/stephaniecoates)",
     "Nelly Kiboi <Nelly.J.Kiboi@aexp.com> (https://github.com/nellyk)",
     "Nickolas Oliver <nickolas.oliver@aexp.com> (https://github.com/PixnBits)"
-  ],
-  "keywords": [
-    "spa",
-    "single page app",
-    "American Express",
-    "web",
-    "react",
-    "holocron",
-    "ui",
-    "one-app"
   ]
 }
