--- a/one-app-statics/package.json
+++ b/one-app-statics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infoxicator-one-app-statics",
-  "version": "5.0.0-rc1",
+  "version": "5.0.5",
   "description": "One App Static Assets",
   "license": "Apache-2.0",
   "contributors": [
