--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ jobs:
       script:
         - docker build -t infoxicator/one-app-test .
         - docker cp $(docker create infoxicator/one-app-test):opt/one-app/build ./one-app-statics
-    - stage: Push image
-      script: ./scripts/docker-push-prod.sh
-      on:
+        - ./scripts/docker-push-prod.sh
+        on:
         branch: feature/npm-publish-test
