fix(script): end to end 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ jobs:
   include:
     - stage: build docker prod image
       script:
-        - docker build -t infoxicator/one-app-test .
-        - docker cp $(docker create infoxicator/one-app-test):opt/one-app/build ./one-app-statics
+        - docker build -t infoxicator/one-app-test:v5.0.8
+        - docker cp $(docker create infoxicator/one-app-test:v5.0.8):opt/one-app/build ./one-app-statics
         - ./scripts/docker-push-prod.sh
       on:
         branch: feature/npm-publish-test
