fix(workflows): workflow env vars

--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -22,7 +22,7 @@ jobs:
         run: NODE_ENV=development npm ci
       - name: Integration tests
         shell: bash
-        env:
+        env: |
           HEROKU_DOCKER_USERNAME: ${{ secrets.HEROKU_DOCKER_USERNAME }}
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
           SURGE_DOMAIN: ${{ secrets.SURGE_DOMAIN }}
