fix(scripts): chown files 2

--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,5 +31,5 @@ jobs:
           SURGE_DOMAIN: ${{ secrets.SURGE_DOMAIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
         run: |
-          chown node:node .
+          chown :1000 .
           ./scripts/run-integration-tests.github.sh -x
