feat(release): add release process for one app using github actions

--- a/.github/workflows/pull_request_release.yml
+++ b/.github/workflows/pull_request_release.yml
@@ -2,7 +2,7 @@ name: one-app-release
 on:
   push:
     branches:
-      - master
+      - release-test
 jobs:
   one-app-release-pull-request:
     runs-on: ubuntu-latest
