chore(dockerignore): add files not needed in docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -25,11 +25,15 @@ renovate.json
 dangerfile.js
 .github
 CODEOWNERS
+docs
+*.png
 
 # test
 test-results
 .jest-cache
 prod-sample
+jest.integration.config.js
+jest.config.js
 
 # env
 .env*
