--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -37,4 +37,15 @@ jobs:
         run: npm publish ./one-app-statics --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Build development docker image
+        run: docker build -t dev . --target=development
+      - name: Tags
+        run: |
+          docker tag prod ${{ secrets.DOCKER_USER }}/one-app:${{ steps.set_tag_version.outputs.tagversion }}
+          docker tag dev ${{ secrets.DOCKER_USER }}/one-app-dev:${{ steps.set_tag_version.outputs.tagversion }}
+      - name: Push
+        run: |
+          docker push ${{ secrets.DOCKER_USER }}/one-app:${{ steps.set_tag_version.outputs.tagversion }}
+          docker push ${{ secrets.DOCKER_USER }}/one-app-dev:${{ steps.set_tag_version.outputs.tagversion }}
+
 
