--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -8,6 +8,6 @@ jobs:
     steps:
     - uses: actions/first-interaction@v1
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        repo-token: ${{ secrets.PA_TOKEN }}
         issue-message: 'Thanks for opening your first issue. Pull requests are always welcome!'
         pr-message: 'Thank you for your contribution to one-app. We will be reviewing your PR. In the meantime, please sign the CLA and make sure all status checks have passed.'
