--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -33,19 +33,27 @@ jobs:
         run: |
           docker cp $(docker create prod):opt/one-app/build ./one-app-statics
           docker cp $(docker create prod):opt/one-app/one-app-statics/package.json ./one-app-statics
-      - name: Publish statics to NPM
-        run: npm publish ./one-app-statics --access public
+      - name: Build project # This would actually build your project, using zip for an example artifact
+        run: |
+          zip --junk-paths one-app-assets one-app-statics/build
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-      - name: Build development docker image
-        run: docker build -t dev . --target=development
-      - name: Tags
-        run: |
-          docker tag prod ${{ secrets.DOCKER_USER }}/one-app:${{ steps.set_tag_version.outputs.tagversion }}
-          docker tag dev ${{ secrets.DOCKER_USER }}/one-app-dev:${{ steps.set_tag_version.outputs.tagversion }}
-      - name: Push
-        run: |
-          docker push ${{ secrets.DOCKER_USER }}/one-app:${{ steps.set_tag_version.outputs.tagversion }}
-          docker push ${{ secrets.DOCKER_USER }}/one-app-dev:${{ steps.set_tag_version.outputs.tagversion }}
-
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./one-app-assets.zip
+          asset_name: one-app-assets.zip
+          asset_content_type: application/zip
 
