--- a/.github/workflows/docker_release.yml
+++ b/.github/workflows/docker_release.yml
@@ -38,6 +38,8 @@ jobs:
         run: npm publish ./one-app-statics --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Build development docker image
+        run: docker build -t dev . --target=development
       - name: Tag Docker Images
         run: |
           docker tag prod ${{ secrets.DOCKER_USER }}/one-app:${{ steps.set_tag_version.outputs.tagversion }}
