--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -9,7 +9,7 @@ jobs:
   tagging-release:
     name: Tagging release
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged && github.head_ref == 'release-automated' && github.base_ref == 'feat/end-to-end-release'
+    if: github.event.pull_request.merged && github.head_ref == 'prerelease' && github.base_ref == 'feat/end-to-end-release'
     steps:
       - uses: actions/checkout@v2
       - name: get commit message
